--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Road map for Nigerian academia and universities",
   "main": "app.py",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node app.js"
   },
   "author": "",
   "license": "ISC",
